# oracle

./: .gitattributes  README.md  _bashrc  _inputrc  _vimrc  functions.lst  functions_preprocess.txt  test.sql
blog/202005_or_expansion_and_virtual_columns/: or_expand_test_no_vcol.sql  or_expand_test_vcol.sql  orcl_ora_2137_20200520_181304_NO_VCOL.trc  orcl_ora_2137_20200520_181319_VCOL.trc
blog/202006_cursor_expressions_return_wrong_results_in_18c_19c/: cursor_expr.sql  orcl_ora_4321.trc  output.txt
blog/202006_for_update_vs_skip_locked_redo_dump/: for_update_skip_locked_redo_dump.sql  orcl_ora_17319_FOR_UPDATE.trc  orcl_ora_17319_FOR_UPDATE_SKIP_LOCKED.trc  spool_file.txt
blog/202006_miguel_anjo_update_queue_table_with_priorities/: update_queue_with_priorities.lst  update_queue_with_priorities.sql  update_queue_with_priorities.tkp
blog/202006_or_expansion_and_virtual_columns_19c/: or_expand_setup.sql  or_expand_test_rewrite.sql  or_expand_test_use_concat.sql  or_expand_test_vcol.sql  orcl_ora_7253_20200608_180223.trc  orcl_ora_7253_20200608_180825.trc  (+1 more)
scripts/: helpbld.awk  helpbld.sh  login.sql  login.sql.20131202  login.sql.20131209  login.sql.def  sql_hint.dict
tools/: ora_hash.py
tools/xinfo/: .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
tools/xinfo/src/xinfo/: __init__.py  __main__.py  _version.py  binutils.py  cache.py  formatter.py
tools/xinfo/src/xinfo/commands/: desc.py  list.py
tools/xinfo/src/xinfo/config/: logging.yaml  settings.py
tools/xinfo/src/xinfo/x/: columns.py  kqfcop.py  kqftab.py  kqftap.py
(+225 files in other folders)
