[metadata]
name = xinfo
version = attr: xinfo.__version__
description = Command line utility to display X$ table meta-information
author = Mikhail Velikikh
author_email = mvelikikh@gmail.com
url = https://github.com/mvelikikh/oracle/tools/xinfo
project_urls =
    Documentation=https://github.com/mvelikikh/oracle/tools/xinfo
    Source=https://github.com/mvelikikh/oracle/tools/xinfo
    Issues=https://github.com/mvelikikh/oracle/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
long_description_content_type = text/x-rst

[options]
python_requires = >=3.6.8
install_requires =
    prettytable >= 2.5.0
    pyyaml >= 6.0
include_package_data = True
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xinfo = xinfo.__main__:cmdline_main
